deploy/ecs.tf
# resource "aws_ecs_cluster" "main" {
#   name = "${local.prefix}-cluster"

#   tags = local.common_tags
# }

# resource "aws_iam_policy" "task_execution_role_policy" {
#   name        = "${local.prefix}-task-exec-role-policy"
#   path        = "/"
#   description = "Allow retrieving images and adding to logs"
#   policy      = file("./templates/ecs/task-exec-role.json")
# }

# resource "aws_iam_role" "task_execution_role" {
#   name               = "${local.prefix}-task-exec-role"
#   assume_role_policy = file("./templates/ecs/assume-role-policy.json")
#   tags               = local.common_tags
# }

# resource "aws_iam_role_policy_attachment" "task_execution_role" {
#   role       = aws_iam_role.task_execution_role.name
#   policy_arn = aws_iam_policy.task_execution_role_policy.arn
# }


# resource "aws_iam_role" "app_iam_role" {
#   name               = "${local.prefix}-vtn-task"
#   assume_role_policy = file("./templates/ecs/assume-role-policy.json")

#   tags = local.common_tags
# }


# resource "aws_cloudwatch_log_group" "ecs_task_logs" {
#   name = "${local.prefix}-vtn"

#   tags = local.common_tags
# }


# data "template_file" "vtn_container_definitions" {
#   template = file("templates/ecs/container-definitions.json.tpl")

#   vars = {
#     app_image        = var.ecr_image_vtn
    # db_host          = aws_db_instance.main.address
    # db_name          = aws_db_instance.main.db_name
    # db_user          = aws_db_instance.main.username
    # db_pass          = aws_db_instance.main.password
#     log_group_name   = aws_cloudwatch_log_group.ecs_task_logs.name
#     log_group_region = data.aws_region.current.name
#   }
# }

# resource "aws_ecs_task_definition" "vtn" {
#   family                   = "${local.prefix}-vtn"
#   container_definitions    = data.template_file.vtn_container_definitions.rendered
#   requires_compatibilities = ["FARGATE"]
#   network_mode             = "awsvpc"
#   cpu                      = 256
#   memory                   = 512
#   execution_role_arn       = aws_iam_role.task_execution_role.arn
#   task_role_arn            = aws_iam_role.app_iam_role.arn

#   tags = local.common_tags
# }

# resource "aws_security_group" "ecs_service" {
#   description = "Access for the ECS service"
#   name        = "${local.prefix}-ecs-service"
#   vpc_id      = aws_vpc.main.id

#   egress {
#     from_port   = 443
#     to_port     = 443
#     protocol    = "tcp"
#     cidr_blocks = ["0.0.0.0/0"]
#   }
#   egress {
#     from_port   = 8080
#     to_port     = 8080
#     protocol    = "tcp"
#     cidr_blocks = ["0.0.0.0/0"]
#   }

#   egress {
#     from_port = 5432
#     to_port   = 5432
#     protocol  = "tcp"
#     cidr_blocks = [
#       aws_subnet.private_a.cidr_block,
#       aws_subnet.private_b.cidr_block,
#     ]
#   }

#   ingress {
#     from_port   = 8080
#     to_port     = 8080
#     protocol    = "tcp"
#     cidr_blocks = ["0.0.0.0/0"]
#   }

#   tags = local.common_tags
# }

# resource "aws_ecs_service" "vtn" {
#   name             = "${local.prefix}-vtn"
#   cluster          = aws_ecs_cluster.main.name
#   task_definition  = aws_ecs_task_definition.vtn.family
#   desired_count    = 1
#   launch_type      = "FARGATE"
#   platform_version = "1.4.0"

#   network_configuration {
#     subnets = [
#       aws_subnet.public_a.id,
#     #   aws_subnet.public_b.id,
#     ]
#     security_groups  = [aws_security_group.ecs_service.id]
#     assign_public_ip = true
#   }
# }
